@@ -128,6 +128,11 @@
     // Local connection is considered as secure by Dovecot.
     SOGoIMAPServer = "imap://PH_IMAP_SERVER:143/";
 
+    // Allow user to add other IMAP accounts that will be visible from the SOGo
+    // Webmail interface.
+    // Default is NO.
+    //SOGoMailAuxiliaryUserAccountsEnabled = YES;
+
     // SMTP server
     SOGoSMTPServer = PH_SMTP_SERVER;
     SOGoMailingMechanism = smtp;
